<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_map_style_change"
        android:title="@string/toggle_custom_map_style"
        app:showAsAction="never"/>

    <item android:id="@+id/action_component_disable"
        android:title="@string/location_disable_component"
        app:showAsAction="never"/>

    <item android:id="@+id/action_component_enabled"
        android:title="@string/location_enable_component"
        app:showAsAction="never"/>

    <item android:id="@+id/action_stop_pulsing"
        android:title="@string/location_stop_pulsing"
        app:showAsAction="never"/>

    <item android:id="@+id/action_start_pulsing"
        android:title="@string/location_start_pulsing"
        app:showAsAction="never"/>

    <item android:id="@+id/action_pulsing_follow_accuracy_radius"
        android:title="@string/location_pulsing_puck_follow_accuracy_radius"
        app:showAsAction="never" />

</menu>